assets/js/base/components/checkbox-control/style.scss
.wc-block-components-checkbox {
	@include reset-typography();
	align-items: center;
	display: flex;
	height: 1em;
	position: relative;

	.wc-block-components-checkbox__input[type="checkbox"] {
		appearance: none;
		border: 2px solid currentColor;
		border-radius: 2px;
		height: rem(18px);
		width: rem(18px);
		margin: 0;
		min-height: 18px;
		min-width: 18px;
		overflow: hidden;
		position: static;
		vertical-align: middle;
		background-color: #fff;

		&:checked {
			background: currentColor;
			border-color: currentColor;
		}

		&:not(:checked) + .wc-block-components-checkbox__mark {
			display: none;
		}
	}

	.wc-block-components-checkbox__mark {
		fill: #fff;
		position: absolute;
		left: rem(1px);
		top: rem(5px);
		width: 16px;
		height: 16px;
	}

	.wc-block-components-checkbox__label {
		padding-left: $gap-smaller;
		vertical-align: middle;
	}
}

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
	.wc-block-components-checkbox__mark {
		display: none;
	}
}

